refactor(chaining): refactor state storage - data layer